/* 
  Localizable.strings
  Adequate

  Created by Mathew Gacy on 6/20/19.
  Copyright © 2019 Mathew Gacy. All rights reserved.
*/
"about" = "About";
"acknowledgements" = "Acknowledgements";
"app_name" = "Adequate";
"buy" = "Buy";
"cancel" = "Cancel";
"daily_notifications" = "Daily Notifications";
"dismiss" = "Dismiss";
"email" = "Email";
"empty_message" = "There was no data";
"empty_history_message" = "There are no deals";
"error" = "Error";
"forum" = "Forum";
"history" = "History";
"loading_message" = "LOADING";
"meh" = "Meh";
"notifications" = "Notifications";
"now_now" = "Not Now";
"ok" = "OK";
"privacy_policy" = "Privacy Policy";
"review_app" = "Rate Adequate";
"retry" = "Retry";
"settings" = "Settings";
"share" = "Share";
"sharing_activity_text" = "Check out this deal";
"sold_out" = "Sold Out";
"story" = "Story";
"support" = "Support";
"twitter" = "Twitter";
"unofficial_app_disclaimer" = "This is an unofficial app. Please direct any issues to the developer, not to Meh.";
"web" = "Web";
"welcome_message" = "See the crap meh is selling today.";

/* Alerts */
"disabled_email_alert_body" = "Device is not configured to send email.";
"disabled_notification_alert_body" = "Notifications are disabled. Please allow Adequate to access notifications in Settings.";
"disabled_icon_change_alert_body" = "Sorry, Adequate is not allowed to change its icon.";

/* SyncClientError Messages */
"error.network" = "Network Error: %@";
"error.missing_client" = "Unable to initialize client";
"error.authentication" = "Authentication Error: %@";
"error.missing_field" = "Missing data for %@";
"error.unknown" = "Unknown Error: %@";
"error.empty_operation_handler" = "Operation returned neither result not error.";
"error.empty_result" = "Result contained neither data nor error.";

/* Settings - Theme */
"appearance" = "Appearance";
"theme" = "Theme";
"theme_system" = "System";
"theme_light" = "Light";
"theme_dark" = "Dark";

/* Settings - App Icon */
"app_icon" = "App Icon";
"default_icon" = "Default";
"default_dark_icon" = "Default (Dark)";
"alt_light_icon" = "Alt (Light)";
"alt_dark_icon" = "Alt (Dark)";

/* Welcome - Notifications Scene */
"welcome_notifications_body" = "Enable notifications so Adequate can alert you when meh offers a new daily deal.";
"welcome_notifications_title" = "Enable Notifications?";

/* Pluralization */
"comments.count" = "%d Comment(s)";

/* Accessibility Labels */
"accessibility.buy_button" = "Buy";
"accessibility.deal_button" = "Show Deal";
"accessibility.history_button" = "Show History";
"accessibility.share_button" = "Share Deal";
"accessibility.story_button" = "Show Story";
"accessibility.left_chevron_button" = "Left Chevron Button";
"accessibility.right_chevron_button" = "Right Chevron Button";
"accessibility.settings_button" = "Show Settings";
"accessibility.not_now_button" = "Not Now Button";
"accessibility.allow_notifications_button" = "Allow Notifications Button";
/*"accessibility." = "";*/

/* Extension - WidgetExtension */
"widget_extension_name" = "Current Deal";
"widget_extension_description" = "View the current deal on Meh.";
"widget_extension_placeholder_title" = "Some Great New Deal";
