...
    }

    // MARK: - Subviews

    private var closeButton: UIButton = {
        let button = UIButton()
        button.setImage(#imageLiteral(resourceName: "CloseNavBar"), for: .normal)
        button.layer.cornerRadius = 14.0
        button.imageEdgeInsets = UIEdgeInsets(top: 4.0, left: 4.0, bottom: 4.0, right: 4.0)
        button.tintColor = .white
        button.backgroundColor = ColorPalette.darkGray
        button.alpha = 0.0
        return button
...
